Bug fix: Whitespace on remaining label tooltips (#4454)

--- a/frontend/components/forms/UserSettingsForm/_styles.scss
+++ b/frontend/components/forms/UserSettingsForm/_styles.scss
@@ -3,11 +3,11 @@
     width: 100%;
   }
 
-  .form-field {
-    &__label {
-      font-size: $x-small;
-      font-weight: $bold;
-    }
+  .form-field__label {
+    font-size: $x-small;
+    font-weight: $bold;
+    // so tooltips won't be triggered with whitespace
+    display: inline-block;
   }
 
   &__email-hint {
