--- a/frontend/pages/software/ManageSoftwarePage/components/ManageAutomationsModal/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/components/ManageAutomationsModal/_styles.scss
@@ -49,8 +49,7 @@
     }
 
     .form-field--input {
-      display: flex;
-      flex-direction: column;
+      display: block;
       width: 100%;
       margin-right: $pad-small;
       margin-bottom: 0;
@@ -67,6 +66,11 @@
         margin-top: -5px;
       }
     }
+  }
+
+  // so tooltips won't be triggered with whitespace
+  .form-field__label {
+    display: inline-block;
   }
 
   .form-field__label--error {
